syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.protobuf";
option java_outer_classname = "ProtobufProto";


package protobuf;

service BroadcastServer {

  // 向fd发送消息
  rpc Fd (BroadcastReq) returns (BroadcastRsp) {
  }

  // 向用户发送消息
  rpc Uid (BroadcastReq) returns (BroadcastRsp) {
  }

  // 向用户发送消息
  rpc User (BroadcastReq) returns (BroadcastRsp) {
  }

  // 向组发送消息
  rpc Group (BroadcastReq) returns (BroadcastRsp) {
  }

  // 向app发送消息
  rpc App (BroadcastReq) returns (BroadcastRsp) {
  }

  // 向所有连接发送消息
  rpc All (BroadcastReq) returns (BroadcastRsp) {
  }

}


// 发送消息
message BroadcastReq {
  string seq = 1; // 序列号
  string userId = 3; // 用户ID
  string cms = 4; // cms 动作: msg/enter/exit
  string type = 5; // type 消息类型，默认是 text
  string msg = 6; // msg
  bool isLocal = 7; // 是否查询本机 acc内部调用为:true(本机查询不到即结束)
}

message BroadcastRsp {
  uint32 retCode = 1;
  string errMsg = 2;
  string sendMsgId = 3;
}
